--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-07 18:09+0200\n"
+"POT-Creation-Date: 2021-12-08 12:23+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -1211,7 +1211,7 @@ msgstr "Enrol students in the course"
 #: edit_course/templates/edit_course/usertag_delete.html
 #: edit_course/templates/edit_course/usertag_list.html
 #: external_services/templates/external_services/list_menu.html
-#: news/templates/news/list.html templates/base.html
+#: news/templates/news/list.html templates/ajax_search_select.html
 msgid "REMOVE"
 msgstr "Remove"
 
@@ -4467,6 +4467,14 @@ msgid "ERROR_NUMBER_MUST_BE_BETWEEN_0_AND_1"
 msgstr "The number must be between 0.0 and 1.0"
 
 #: lib/fields.py
+msgid "CLIPBOARD_STUDENT_IDS"
+msgstr "Student IDs"
+
+#: lib/fields.py
+msgid "CLIPBOARD_EMAIL_ADDRESSES"
+msgstr "Email addresses"
+
+#: lib/fields.py
 msgid "ERROR_ENTER_VALID_JSON"
 msgstr "Enter valid JSON."
 
@@ -4603,6 +4611,26 @@ msgstr ""
 "For an unknown reason you arrived somewhere that does not exist. Please, try "
 "again. "
 
+#: templates/ajax_search_select.html
+msgid "SEARCH"
+msgstr "Search"
+
+#: templates/ajax_search_select.html
+msgid "IMPORT_LIST"
+msgstr "Import list"
+
+#: templates/ajax_search_select.html
+msgid "NO_MATCHES"
+msgstr "No matches"
+
+#: templates/ajax_search_select.html
+msgid "SEARCH_OR_PASTE"
+msgstr "Enter a search term or paste a list"
+
+#: templates/ajax_search_select.html
+msgid "COPY_SELECTION"
+msgstr "Copy all selected"
+
 #: templates/base.html
 msgid "SKIP_MAIN_NAVIGATION"
 msgstr "Skip main navigation"
@@ -4666,18 +4694,6 @@ msgstr "Feedback"
 #: templates/base.html
 msgid "LOADING_FAILED"
 msgstr "Loading failed!"
-
-#: templates/base.html
-msgid "SEARCH"
-msgstr "Search"
-
-#: templates/base.html
-msgid "NO_MATCHES"
-msgstr "No matches"
-
-#: templates/base.html
-msgid "SEARCH_FOR"
-msgstr "Search for..."
 
 #: templates/support_channels.html
 msgid "STUDENTS"
