Fix incorrect information in the official points tooltip
This tooltip is used in the All results table (course points page).

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-15 12:21+0200\n"
+"POT-Creation-Date: 2021-12-23 11:24+0200\n"
 "PO-Revision-Date: 2021-05-27 14:47+0300\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: English<>\n"
@@ -3887,8 +3887,13 @@ msgstr "Options"
 msgid "OFFICIAL_POINTS_TOOLTIP"
 msgstr ""
 "Points are official if the submission is within deadline and submission "
-"count limits. Submission must be also accepted and confirmed (for example, "
-"in case of mandatory feedback)."
+"count limits. Unofficial submissions are allowed only if they have been "
+"enabled in the assignment category settings. KNOWN ISSUES: (1) the official "
+"points currently include also unconfirmed points. Unconfirmed points exist "
+"only if mandatory activities have been enabled in the assignment category "
+"settings. Usually, mandatory activities are used for mandatory chapter "
+"feedback questionnaires. (2) DO NOT PRESS this checkbox MORE THAN ONCE. If "
+"you do, the points table will keep showing UNOFFICIAL points."
 
 #: exercise/templates/exercise/staff/results.html
 msgid "RESULTS_SHOW_ONLY_OFFICIAL_POINTS"
