--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-12-20 11:32+0200\n"
+"POT-Creation-Date: 2021-12-23 11:24+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -3893,9 +3893,15 @@ msgstr "Valinnat"
 #: exercise/templates/exercise/staff/results.html
 msgid "OFFICIAL_POINTS_TOOLTIP"
 msgstr ""
-"Pisteet ovar virallisia jos palautus on tehty määräajassa ja sallittujen "
-"palautuskertojen sisällä. Palautus täytyy olla myös hyväksytty ja "
-"varmistettu (esimerkiksi pakollisen palautteen yhteydessä)."
+"Pisteet ovat virallisia, jos palautus on tehty määräajassa ja sallittujen "
+"palautuskertojen sisällä. Epäviralliset palautukset ovat mahdollisia vain, "
+"jos epäviralliset palautukset on sallittu tehtäväkategorian asetuksissa. "
+"TUNNETUT ONGELMAT: (1) viralliset pisteet sisältävät myös vahvistamattomat "
+"pisteet. Vahvistamattomia pisteitä on olemassa vain, jos tehtäväkategoriassa "
+"on asetettu pakolliset osiot. Yleensä pakollisia osioita käytetään "
+"pakollisiin palautelomakkeisiin lukujen lopussa. (2) ÄLÄ PAINA tätä valintaa "
+"YLI YHDEN KERRAN. Jos tätä painetaan useammin kuin kerran, taulukko näyttää "
+"kuitenkin aina EPÄVIRALLISIA pisteitä."
 
 #: exercise/templates/exercise/staff/results.html
 msgid "RESULTS_SHOW_ONLY_OFFICIAL_POINTS"
