--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-20 18:41+0200\n"
+"POT-Creation-Date: 2022-02-07 22:28+0200\n"
 "PO-Revision-Date: 2019-08-14 12:16+0200\n"
 "Last-Translator: Ella Anttila <ella.anttila@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -1448,7 +1448,8 @@ msgstr "Luotiin uusi opiskelijaryhmä."
 msgid "LABEL_MODULE"
 msgstr "Moduuli"
 
-#: deviations/forms.py deviations/models.py exercise/submission_models.py
+#: deviations/forms.py deviations/models.py exercise/exercise_models.py
+#: exercise/submission_models.py
 msgid "LABEL_EXERCISE"
 msgstr "Tehtävä"
 
@@ -1590,6 +1591,7 @@ msgstr "enimmäispalautuskertojen poikkeamat"
 
 #: deviations/templates/deviations/_remove_modal.html
 #: exercise/templates/exercise/staff/_assessment_panel.html
+#: exercise/templates/exercise/staff/_regrade_submissions.html
 #: exercise/templates/exercise/staff/_resubmit_modal.html
 #: exercise/templates/exercise/staff/_submission_data_modal.html
 #: templates/base.html
@@ -3074,6 +3076,28 @@ msgstr "tehtävä liitetiedostolla"
 msgid "MODEL_NAME_EXERCISE_WITH_ATTACHMENT_PLURAL"
 msgstr "tehtävät liitetiedostoilla"
 
+#: exercise/exercise_models.py
+#: exercise/templates/exercise/staff/_regrade_submissions.html
+#: exercise/viewbase.py
+msgid "REGRADE"
+msgstr "Arvioi uudestaan"
+
+#: exercise/exercise_models.py
+msgid "LABEL_TASK_TYPE"
+msgstr "tehtävän tyyppi"
+
+#: exercise/exercise_models.py
+msgid "LABEL_TASK_ID"
+msgstr "tehtävän tunniste"
+
+#: exercise/exercise_models.py
+msgid "MODEL_NAME_EXERCISE_TASK"
+msgstr "Uudelleenarvioinnin tausta-ajo"
+
+#: exercise/exercise_models.py
+msgid "MODEL_NAME_EXERCISE_TASK_PLURAL"
+msgstr "Uudelleenarvioinnin tausta-ajot"
+
 #: exercise/exercisecollection_models.py
 msgid "LABEL_TARGET_CATEGORY"
 msgstr "kohdekategoria"
@@ -3296,6 +3320,14 @@ msgstr "Arvostelutapa: {}"
 #: exercise/staff_views.py
 msgid "ASSESS_SUBMISSION_REVIEW_SAVED_SUCCESS"
 msgstr "Palaute on tallennettu, ja opiskelijoille on lähetetty ilmoitus."
+
+#: exercise/staff_views.py
+msgid "NEW_REGRADE_TASK_CREATED"
+msgstr "Uudelleenarviointi aloitettu."
+
+#: exercise/staff_views.py
+msgid "REGRADE_ALREADY_RUNNING"
+msgstr "Uudelleenarviointi on jo käynnissä."
 
 #: exercise/staff_views.py
 msgid "ALL_SUBMITTERS_HAVE_BEEN_ASSESSED"
@@ -3838,6 +3870,14 @@ msgstr "Virheet tarkistimelta"
 msgid "ASSISTANT_FEEDBACK"
 msgstr "Kurssihenkilökunnan palaute"
 
+#: exercise/templates/exercise/staff/_regrade_submissions.html
+msgid "REGRADE_DESCRIPTION"
+msgstr "Arvioi uudelleen kaikki tai kesken jääneet palautukset."
+
+#: exercise/templates/exercise/staff/_regrade_submissions.html
+msgid "START_REGRADE"
+msgstr "Aloita uudelleenarviointi"
+
 #: exercise/templates/exercise/staff/_resubmit_modal.html
 msgid "RE-SUBMIT_TO_SERVICE"
 msgstr "Lähetä arvosteltavaksi uudelleen"
@@ -3967,6 +4007,7 @@ msgstr "Moduulin valinta"
 
 #: exercise/templates/exercise/staff/analytics.html
 #: exercise/templates/exercise/staff/results.html
+#: exercise/templatetags/exercise.py
 msgid "ALL"
 msgstr "Kaikki"
 
@@ -4233,6 +4274,28 @@ msgstr "Tulokset on tällä hetkellä piilotettu."
 #: exercise/templatetags/exercise.py
 msgid "EXCEL_COMPATIBLE_CSV"
 msgstr "Excel-yhteensopiva CSV"
+
+#: exercise/templatetags/exercise.py
+msgid "INCOMPLETE"
+msgstr "Keskeneräiset"
+
+#: exercise/viewbase.py
+#, python-brace-format
+msgid "REGRADING_PCT -- {percent}"
+msgstr "Arvioidaan {percent}%"
+
+#: exercise/viewbase.py
+#, python-brace-format
+msgid "REGRADING_PROGRESS -- {current}, {total}"
+msgstr "Arvioidaan, tehty {current} / {total}."
+
+#: exercise/viewbase.py
+msgid "REGRADING"
+msgstr "Arvioidaan"
+
+#: exercise/viewbase.py
+msgid "STARTING_REGRADE"
+msgstr "Aloitetaan uudelleenarviointi."
 
 #: exercise/views.py
 msgid "EXERCISE_IN_MAINTENANCE_AND_HIDDEN_FROM_STUDENTS"
